--- a/WebContent/Index.html
+++ b/WebContent/Index.html
@@ -5,6 +5,7 @@
 	<meta charset="ISO-8859-1" content="no-cache" />
 	<title>Main Page</title>
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<!-- <script src="./WEB-INF/lib/jquery-3.5.1.js"></script> -->
 	<script src="./CookieLib.js"></script>
 	<script src="./index.js"></script>
 </head>
