--- a/WebContent/OrderMgmt.html
+++ b/WebContent/OrderMgmt.html
@@ -5,6 +5,7 @@
 <meta charset="ISO-8859-1" content="no-cache" />
 <title>Customer Order Management</title>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<!-- <script src="./WEB-INF/lib/jquery-3.5.1.js"></script> -->
 <script src="./CookieLib.js"></script>
 <script src="./OrderMgmt.js"></script>
 </head>
