Just rearranging some code..

--- a/WebContent/OrderMgmt.html
+++ b/WebContent/OrderMgmt.html
@@ -52,7 +52,7 @@
 			<select name="shipPayr" id="shipPayr">
 				<option value="1">1: Customer Pays</option>
 				<option value="2">2: Free</option>
-				<option value="3">3: Half & Half</option>
+				<option value="3">3: Half &amp; Half</option>
 			</select><br/>
 			<label for="shipAddr">Ship Addr.: </label>
 			<input type="text" name="shipAddr" id="shipAddr" style="width:400px"/><br/>
@@ -118,7 +118,7 @@
 			<input type="text" name="subTotal" id="subTotal" style="width:150px; text-align:right" disabled/>
 			<label for="taxAmt" style="font-style:italic">Sales Tax: </label>
 			<input type="text" name="taxAmt" id="taxAmt" style="width:150px; text-align:right" disabled/><br/>
-			<label for="shipChrg" style="font-style:italic">S&H: </label>
+			<label for="shipChrg" style="font-style:italic">S&amp;H: </label>
 			<input type="text" name="shipChrg" id="shipChrg" style="width:150px; text-align:right" disabled/><br/>
 			<label for="dcAmt" style="color:red; font-weight:bold">Discount: </label>
 			<input type="number" name="dcAmt" id="dcAmt" pattern="[0-9]+([\.,\[0-9]+)?" step="0.01" style="width:150px; text-align:right"/><br/>
